--- a/app/src/main/res/layout/erathquake_list_item.xml
+++ b/app/src/main/res/layout/erathquake_list_item.xml
@@ -10,6 +10,7 @@
     android:paddingStart="16dp">
 
     <TextView
+
         android:id="@+id/magnitude"
         android:layout_width="36dp"
         android:layout_height="36dp"
@@ -31,15 +32,13 @@
         android:orientation="vertical">
 
         <TextView
+
+
             android:id="@+id/location_offset"
-            android:layout_width="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_width="16dp"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:fontFamily="sans-serif-medium"
-            android:maxLines="1"
-            android:textAllCaps="true"
-            android:textColor="@color/textColorEarthquakeDetails"
-            android:textSize="12sp"
+            android:layout_weight="1"
             tools:text="30km S of" />
 
         <TextView
