--- a/app/src/main/res/layout/erathquake_list_item.xml
+++ b/app/src/main/res/layout/erathquake_list_item.xml
@@ -32,11 +32,9 @@
         android:orientation="vertical">
 
         <TextView
-
-
             android:id="@+id/location_offset"
-            android:layout_marginLeft="16dp"
-            android:layout_width="16dp"
+            android:layout_marginLeft="8dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             tools:text="30km S of" />
