--- a/app/src/main/res/layout/erathquake_list_item.xml
+++ b/app/src/main/res/layout/erathquake_list_item.xml
@@ -23,8 +23,8 @@
         tools:text="8.9" />
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
@@ -33,9 +33,9 @@
 
         <TextView
             android:id="@+id/location_offset"
-            android:layout_marginLeft="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
             android:layout_weight="1"
             tools:text="30km S of" />
 
